# stderrlog-rs

./: .travis.yml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md  SECURITY.md  appveyor.yml  index.html  search-index.js
.github/workflows/: ci.yml  rust-clippy.yml
benches/: junk_modules.rs  no_color.rs  quiet.rs  real_calls.rs  skip_module.rs
benches/common/: mod.rs
benches/util/: mod.rs
examples/: clap.rs  docopt.rs  stderrlog.rs  structopt.rs  timestamp.rs
examples/large-example/: Cargo.toml
examples/large-example/src/: bar.rs  foo.rs  lib.rs  main.rs
implementors/alloc/allocator/: trait.Alloc.js
implementors/alloc/borrow/: trait.ToOwned.js
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Pointer.js  trait.Write.js
implementors/core/hash/: trait.BuildHasher.js  trait.Hash.js  trait.Hasher.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.DoubleEndedIterator.js  trait.ExactSizeIterator.js  trait.Extend.js  trait.FromIterator.js  trait.FusedIterator.js  trait.IntoIterator.js  trait.Sum.js  trait.TrustedLen.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.Div.js  trait.DivAssign.js  trait.Mul.js  trait.MulAssign.js  trait.Neg.js  trait.Sub.js  trait.SubAssign.js
implementors/core/ops/bit/: trait.BitAnd.js  trait.BitOr.js  trait.BitXor.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/ops/function/: trait.FnOnce.js
implementors/core/ops/index/: trait.Index.js  trait.IndexMut.js
implementors/core/ops/place/: trait.BoxPlace.js  trait.Boxed.js  trait.InPlace.js  trait.Place.js  trait.Placer.js
implementors/core/ops/unsize/: trait.CoerceUnsized.js
implementors/core/slice/: trait.SliceIndex.js
implementors/core/str/: trait.FromStr.js
implementors/core/str/pattern/: trait.Pattern.js
implementors/log/: trait.Log.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.UnwindSafe.js
implementors/std/sys/imp/ext/process/: trait.CommandExt.js
src/: lib.rs
src/stderrlog/: lib.rs.html
src/time/: display.rs.html  duration.rs.html  lib.rs.html  parse.rs.html  sys.rs.html
stderrlog/: StdErrLog.t.html  enum.Timestamp.html  fn.new.html  index.html  sidebar-items.js  struct.StdErrLog.html
tests/: debug_level.rs  debug_level_log.rs  error_level.rs  info_level.rs  module_inclusion.rs  no_levels_output.rs  pty_closed.rs  quiet_trace_level.rs  trace_level.rs  warn_level.rs
tests/utils/: mod.rs
time/: struct.Duration.html  struct.SteadyTime.html  struct.Timespec.html  struct.Tm.html
