[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
description = "Logger that logs to stderr based on verbosity specified"
documentation = "https://docs.rs/stderrlog/"
homepage = "https://github.com/cardoe/stderrlog-rs"
keywords = ["log", "loglevel", "logging", "stderr", "stderrlog"]
categories = ["development-tools::debugging"]
license = "MIT/Apache-2.0"
name = "stderrlog"
readme = "README.md"
repository = "https://github.com/cardoe/stderrlog-rs"
version = "0.5.1"
edition = "2018"

[badges]
appveyor = { repository = "cardoe/stderrlog-rs", branch = "master", service = "github" }
travis-ci = { repository = "cardoe/stderrlog-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "cardoe/stderrlog-rs" }
is-it-maintained-open-issues = { repository = "cardoe/stderrlog-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
atty = "^0.2.6"
chrono = "0.4.10"
log = { version = "0.4.11", features = ["std"] }
termcolor = "~1.1"
thread_local = "~1.0"

[dev-dependencies]
clap = "~2.33.0"
docopt = "~1.0"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.18"
structopt = "0.2.11"
